Drop HotJar, enable IP anonymization

--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -509,7 +509,7 @@
 </div>
 
       <script src="/js/jquery.js"></script>
-<script src="/js/app.js"></script>
+      <script src="/js/app.js"></script>
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -517,19 +517,9 @@
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
         ga('create', 'UA-10159761-12', 'auto');
+        ga('set', 'anonymizeIp', true);
         ga('send', 'pageview');
       </script>
     </footer>
-    <!-- Hotjar Tracking Code for http://getsaleor.com/ -->
-    <script>
-      (function(h,o,t,j,a,r){
-          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-          h._hjSettings={hjid:716251,hjsv:6};
-          a=o.getElementsByTagName('head')[0];
-          r=o.createElement('script');r.async=1;
-          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-          a.appendChild(r);
-      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
   </body>
 </html>
