--- a/index.html
+++ b/index.html
@@ -387,19 +387,9 @@
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
         ga('create', 'UA-10159761-12', 'auto');
+        ga('set', 'anonymizeIp', true);
         ga('send', 'pageview');
       </script>
     </footer>
-    <!-- Hotjar Tracking Code for http://getsaleor.com/ -->
-    <script>
-      (function(h,o,t,j,a,r){
-          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-          h._hjSettings={hjid:716251,hjsv:6};
-          a=o.getElementsByTagName('head')[0];
-          r=o.createElement('script');r.async=1;
-          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-          a.appendChild(r);
-      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
   </body>
 </html>
